fix(core): only allow KV to be created for an existing namespace (#4522)
Fix: #4522