@@ -5,7 +5,7 @@ import io.kestra.core.runners.RunContext;
 import io.kestra.core.runners.RunContextFactory;
 import io.kestra.core.storages.StorageInterface;
 import io.kestra.core.storages.kv.KVStore;
-import io.kestra.core.utils.IdUtils;
+import io.kestra.core.storages.kv.KVStoreException;
 import io.kestra.core.utils.TestsUtils;
 import jakarta.inject.Inject;
 import org.junit.jupiter.api.Assertions;
@@ -14,8 +14,8 @@ import org.junit.jupiter.api.Test;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
-import java.util.Collections;
 import java.util.Map;
+import java.util.Optional;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
@@ -23,6 +23,8 @@ import static org.hamcrest.Matchers.nullValue;
 
 @KestraTest
 public class SetTest {
+    static final String TEST_KEY = "test-key";
+
     @Inject
     StorageInterface storageInterface;
 
@@ -30,77 +32,154 @@ public class SetTest {
     RunContextFactory runContextFactory;
 
     @Test
-    void defaultCase() throws Exception {
+    void shouldSetKVGivenNoNamespace() throws Exception {
         // Given
-        String namespaceId = "io.kestra." + IdUtils.create();
-
         Set set = Set.builder()
             .id(Set.class.getSimpleName())
             .type(Set.class.getName())
-            .namespace("{{ inputs.namespace }}")
             .key("{{ inputs.key }}")
             .value("{{ inputs.value }}")
             .build();
 
-        String key = "my-key";
         var value = Map.of("date", Instant.now().truncatedTo(ChronoUnit.MILLIS), "int", 1, "string", "string");
         final RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, set, Map.of(
-            "namespace", namespaceId,
-            "key", key,
+            "key", TEST_KEY,
             "value", value
         ));
+
+        // When
         set.run(runContext);
 
-        final KVStore kv = runContext.namespaceKv(namespaceId);
-        assertThat(kv.get(key).get(), is(value));
-        assertThat(kv.list().get(0).expirationDate(), nullValue());
+        // Then
+        final KVStore kv = runContext.namespaceKv(runContext.flowInfo().namespace());
+        assertThat(kv.getValue(TEST_KEY), is(Optional.of(value)));
+        assertThat(kv.list().getFirst().expirationDate(), nullValue());
     }
 
     @Test
-    void ttl() throws Exception {
+    void shouldSetKVGivenSameNamespace() throws Exception {
         // Given
-        String namespaceId = "io.kestra." + IdUtils.create();
+        RunContext runContext = this.runContextFactory.of(Map.of(
+            "flow", Map.of("namespace", "io.kestra.test"),
+            "inputs", Map.of(
+                "key", TEST_KEY,
+                "value", "test-value"
+            )
+        ));
 
-        String key = "my-key";
-        String value = "value";
         Set set = Set.builder()
             .id(Set.class.getSimpleName())
             .type(Set.class.getName())
-            .namespace(namespaceId)
-            .key(key)
-            .value(value)
+            .key("{{ inputs.key }}")
+            .value("{{ inputs.value }}")
+            .namespace("io.kestra.test")
+            .build();
+
+        // When
+        set.run(runContext);
+
+        // Then
+        final KVStore kv = runContext.namespaceKv("io.kestra.test");
+        assertThat(kv.getValue(TEST_KEY), is(Optional.of("test-value")));
+        assertThat(kv.list().getFirst().expirationDate(), nullValue());
+    }
+
+    @Test
+    void shouldSetKVGivenChildNamespace() throws Exception {
+        // Given
+        RunContext runContext = this.runContextFactory.of(Map.of(
+            "flow", Map.of("namespace", "io.kestra.test"),
+            "inputs", Map.of(
+                "key", TEST_KEY,
+                "value", "test-value"
+            )
+        ));
+
+        Set set = Set.builder()
+            .id(Set.class.getSimpleName())
+            .type(Set.class.getName())
+            .key("{{ inputs.key }}")
+            .value("{{ inputs.value }}")
+            .namespace("io.kestra.test.unit")
+            .build();
+        // When
+        set.run(runContext);
+
+        // then
+        final KVStore kv = runContext.namespaceKv("io.kestra.test.unit");
+        assertThat(kv.getValue(TEST_KEY), is(Optional.of("test-value")));
+        assertThat(kv.list().getFirst().expirationDate(), nullValue());
+    }
+
+    @Test
+    void shouldFailGivenNonExistingNamespace() {
+        // Given
+        RunContext runContext = this.runContextFactory.of(Map.of(
+            "flow", Map.of("namespace", "io.kestra.test"),
+            "inputs", Map.of(
+                "key", TEST_KEY,
+                "value", "test-value"
+            )
+        ));
+
+        Set set = Set.builder()
+            .id(Set.class.getSimpleName())
+            .type(Set.class.getName())
+            .key("{{ inputs.key }}")
+            .value("{{ inputs.value }}")
+            .namespace("???")
+            .build();
+
+        // When - Then
+        Assertions.assertThrows(KVStoreException.class, () -> set.run(runContext));
+    }
+
+    @Test
+    void shouldSetKVGivenTTL() throws Exception {
+        // Given
+        Set set = Set.builder()
+            .id(Set.class.getSimpleName())
+            .type(Set.class.getName())
+            .key("{{ inputs.key }}")
+            .value("{{ inputs.value }}")
             .ttl(Duration.ofMinutes(5))
             .build();
 
-        final RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, set, Collections.emptyMap());
+        var value = Map.of("date", Instant.now().truncatedTo(ChronoUnit.MILLIS), "int", 1, "string", "string");
+        final RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, set, Map.of(
+            "key", TEST_KEY,
+            "value", value
+        ));
+
+        // When
         set.run(runContext);
 
-        final KVStore kv = runContext.namespaceKv(namespaceId);
-        assertThat(kv.get(key).get(), is(value));
-        Instant expirationDate = kv.list().get(0).expirationDate();
+        // Then
+        final KVStore kv = runContext.namespaceKv(runContext.flowInfo().namespace());
+        assertThat(kv.getValue(TEST_KEY), is(Optional.of(value)));
+        Instant expirationDate = kv.get(TEST_KEY).get().expirationDate();
         assertThat(expirationDate.isAfter(Instant.now().plus(Duration.ofMinutes(4))) && expirationDate.isBefore(Instant.now().plus(Duration.ofMinutes(6))), is(true));
     }
 
     @Test
-    void dontAllowOverwriteIfFalse() throws Exception {
+    void shouldFailGivenExistingKeyAndOverwriteFalse() {
         // Given
-        String namespaceId = "io.kestra." + IdUtils.create();
-
-        String key = "my-key";
-        String value = "value";
         Set set = Set.builder()
             .id(Set.class.getSimpleName())
             .type(Set.class.getName())
-            .namespace(namespaceId)
-            .key(key)
-            .value(value)
+            .key("{{ inputs.key }}")
+            .value("{{ inputs.value }}")
             .overwrite(false)
             .build();
 
-        final RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, set, Collections.emptyMap());
-        set.run(runContext);
+        var value = Map.of("date", Instant.now().truncatedTo(ChronoUnit.MILLIS), "int", 1, "string", "string");
+        final RunContext runContext = TestsUtils.mockRunContext(this.runContextFactory, set, Map.of(
+            "key", TEST_KEY,
+            "value", value
+        ));
 
-        IllegalStateException illegalStateException = Assertions.assertThrows(IllegalStateException.class, () -> set.run(runContext));
-        assertThat(illegalStateException.getMessage(), is("Key already exists and overwrite is set to `false`"));
+        // When - Then
+        KVStoreException exception = Assertions.assertThrows(KVStoreException.class, () -> set.run(runContext));
+        assertThat(exception.getMessage(), is("Cannot set value for key '" + TEST_KEY + "'. Key already exists and `overwrite` is set to `false`."));
     }
 }
